[package]
name = "solana-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-receiver={ path = "/home/rizanc/solana-receiver" }
anchor-client = "0.29.0"
anyhow = "1.0.75"
bs58 = "0.5.1"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.11.1"
futures = "0.3"
log = "0.4.20"
raydium-contract-instructions = { git = "http://github.com/raydium-io/raydium-contract-instructions.git", rev = "8710befa6d900a15b03a2fadb8a7caa0a91cfbdb" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
solana-transaction-status = "1.18.9"
spl-associated-token-account = "3.0.2"
spl-token = "4.0.0"

tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = "0.1.15"
spl-token-client = "0.10.0"
